@@ -29,6 +29,11 @@ Release date: TBA
   windows directory delimiter instead of a regular expression escape
   character.
 
+* Fixed a crash with the ``ignore-paths`` option when invoking the option
+  via the command line.
+
+  Closes #5437
+
 ..
   Insert your changelog randomly, it will reduce merge conflicts
   (Ie. not necessarily at the end)
